fixing spacing and alignment/change format back to standard time

--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
+
 body {
     font-family: 'Open Sans', sans-serif;
     font-size: 16px;
     line-height: 1;
+    background-color: thistle;
   }
   
   textarea{
@@ -15,12 +17,16 @@ body {
   
   .jumbotron {
     text-align: center;
+    padding: 2rem 2rem;
     background-color: transparent;
     color: black;
     border-radius: 0;
     border-bottom: 10px solid black;
   }
   
+  .container{
+    padding-bottom: 2rem;
+  }
   .description{
     white-space: pre-wrap;
   }
@@ -33,28 +39,31 @@ body {
   .row {
     white-space: pre-wrap;
     height: 80px;
-    border-top: 1px solid white;;
+    padding-top: 2px;
   }
   
   .hour {
     background-color: #ffffff;
     color: #000000;
     border-top: 1px dashed #000000;
+    padding: 28px 24px 24px;
+    margin-top: 1px;
+    
+    
   }
   
   .past {
-    background-color: #d3d3d3;
-    color: white;
+    background-color: plum;
+   
   }
   
   .present {
     background-color: #ff6961;
-    color: white;
   }
   
   .future {
     background-color: #77dd77;
-    color: white;
+  
   }
   
   .saveBtn {
